--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -40,7 +40,7 @@
     padding: 2px !important;
     margin: 0 !important;
     line-height: 0.5 !important;
-    vertical-align: middle !important;
+    vertical-align: baseline !important;
     display: table-cell !important;
     gap: 10px;
 }
