--- a/Tarmonia/css/custom-styles.css
+++ b/Tarmonia/css/custom-styles.css
@@ -39,8 +39,8 @@
 .variations td.value {
     padding: 2px !important;
     margin: 0 !important;
-    line-height: 1 !important;
-    vertical-align: middle !important;
+    line-height: 0.5 !important;
+    vertical-align: baseline !important;
     display: table-cell !important;
     gap: 10px;
 }
